--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,7 +5,8 @@ on:
     branches:
       - master
 
-build:
+jobs:
+  build:
     runs-on: ubuntu-latest
     steps:
         - name: Checkout source Git branch
