--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,7 +12,7 @@ jobs:
         - name: Checkout source Git branch
           uses: actions/checkout@v2
           with:
-            ref: main
+            ref: master
             fetch-depth: 10
             submodules: true
 
