--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,8 +16,28 @@ jobs:
             fetch-depth: 10
             submodules: true
 
+        - name: Make destination directory for compiled CSS
+          run: mkdir -vp /tmp/portfolio_website/assets/css
+  
         - name: Compile CSS from SCSS files
           uses: gha-utilities/sass-build@v0.4.11
           with:
-            source: ./styles/styles.scss
-            destination: ./styles/styles.css
+            source: styles/styles.scss
+            destination: /tmp/portfolio_website/assets/css/main.css
+  
+        - name: Move compiled CSS to path within pr-pages branch
+          run: mv /tmp/portfolio_website/assets/css styles/
+  
+        - name: Add and Commit changes to pr-pages branch
+          run: |
+            git config --local user.email 'action@github.com'
+            git config --local user.name 'GitHub Action'
+            git add styles/*
+            git commit -am 'Updates compiled CSS files'
+  
+        - name: Push changes
+          uses: ad-m/github-push-action@master
+          with:
+            github_token: ${{ secrets.GITHUB_TOKEN }}
+            branch: master
+  
